--- a/vue/css/vue.css
+++ b/vue/css/vue.css
@@ -8,9 +8,9 @@
 .form {
   position: relative;
   z-index: 1;
-  background: #FFFFFF;
+  background: rgba(255, 255, 255, 0.8);
   max-width: 360px;
-  margin: 0 auto 100px;
+  margin: 30% auto 100px;
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
