--- a/vue/css/vue.css
+++ b/vue/css/vue.css
@@ -90,7 +90,7 @@
   color: #EF3B3A;
 }
 body {
-
+  background-color: black;
 /*  background: #76b852; *//* fallback for old browsers */
 /*  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
   background: -moz-linear-gradient(right, #76b852, #8DC26F);
@@ -103,4 +103,21 @@ body {
 
 .titreForm{
   color: white;
+}
+
+@media only screen and (max-width: 1457px) {
+    body {
+
+        background-image: url(../img/fondMobile.png);
+    }
+    .form {
+      position: relative;
+      z-index: 1;
+      background: rgba(8, 194, 235, 0.1);
+      max-width: 360px;
+      margin: 90% auto 100px;
+      padding: 45px;
+      text-align: center;
+      box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    }
 }
